tests/chapter_17/valid/void/cast_void_to_void.c
void foo(void) {
    return;
}

int main(void) {
    (void) foo();
    return 0;
}