tests/chapter_17/invalid_types/incomplete_types/sizeof_bad_type.c
int main(void) {
    return sizeof(void[3]);
}